Moved the built report to the top level

--- a/report/Makefile
+++ b/report/Makefile
@@ -1,6 +1,6 @@
 default:
-	rst2latex.py report.rst | ./transform.rb | rubber-pipe --pdf > report.pdf
-	open report.pdf
+	rst2latex.py report.rst | ./transform.rb | rubber-pipe --pdf > ../report.pdf
+	open ../report.pdf
 
 view:
 	zsh -c "view <( rst2latex.py report.rst | ./transform.rb )"
